// Copyright Tempo Simulation, LLC. All Rights Reserved

syntax = "proto3";

import "TempoSensorsShared/Common.proto";

enum ImageCompressionLevel {
  MIN = 0;
  LOW = 1;
  MID = 2;
  HIGH = 3;
  MAX = 4;
}

message ColorImage {
  TempoSensorsShared.MeasurementHeader header = 1;
  uint32 width = 2;
  uint32 height = 3;
  bytes data = 4; // Raw bytes of an image file
}

message DepthImage {
  TempoSensorsShared.MeasurementHeader header = 1;
  uint32 width = 2;
  uint32 height = 3;
  repeated float depths = 4; // Depth along camera axis in cm of every pixel
}

message LabelImage {
  TempoSensorsShared.MeasurementHeader header = 1;
  uint32 width = 2;
  uint32 height = 3;
  bytes data = 4; // 0-255 label for every pixel
}

message ColorImageRequest {
  string owner_name = 1;
  string sensor_name = 2;
  ImageCompressionLevel compression_level = 3;
}

message DepthImageRequest {
  string owner_name = 1;
  string sensor_name = 2;
}

message LabelImageRequest {
  string owner_name = 1;
  string sensor_name = 2;
}

message BoundingBoxesRequest {
  string owner_name = 1;
  string sensor_name = 2;
}

message BoundingBox2D {
  uint32 label = 1;
  float x_min = 2;
  float y_min = 3;
  float x_max = 4;
  float y_max = 5;
}

message BoundingBoxes {
  TempoSensorsShared.MeasurementHeader header = 1;
  repeated BoundingBox2D boxes = 2;
}
